syntax = "proto3";

package gothic.api;

option go_package = "github.com/jrapoport/gothic/api/grpc/rpc/account";

import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "response.proto";

service Account {
  rpc Signup (SignupRequest) returns (gothic.api.UserResponse) {
  }

  rpc SendConfirmUser (SendConfirmRequest) returns (google.protobuf.Empty) {
  }

  rpc ConfirmUser (ConfirmUserRequest) returns (gothic.api.BearerResponse) {
  }

  rpc Login (LoginRequest) returns (gothic.api.UserResponse) {
  }

  rpc Logout (LogoutRequest) returns (google.protobuf.Empty) {
  }

  rpc SendResetPassword (ResetPasswordRequest) returns (google.protobuf.Empty) {
  }

  rpc ConfirmResetPassword (ConfirmPasswordRequest) returns (gothic.api.BearerResponse) {
  }
}

message SignupRequest {
  string email = 1;
  string password = 2;
  string username = 3;
  string code = 4;
  google.protobuf.Struct data = 5;
}

message SendConfirmRequest {
  string email = 1;
}

message ConfirmUserRequest {
  string token = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LogoutRequest {}

message ResetPasswordRequest{
  string email = 1;
}

message ConfirmPasswordRequest{
  string password = 1;
  string token = 2;
}

